--- a/FrontEnd/package.json
+++ b/FrontEnd/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@microsoft/signalr": "^8.0.0",
+    "primeicons": "^6.0.1",
     "primereact": "^10.5.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -25,7 +26,9 @@
     "eslint": "^8.56.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.5",
+    "sass": "^1.71.1",
     "typescript": "^5.2.2",
+    "typescript-plugin-css-modules": "^5.1.0",
     "vite": "^5.1.4"
   }
 }
