--- a/FrontEnd/package.json
+++ b/FrontEnd/package.json
@@ -15,6 +15,7 @@
     "primereact": "^10.5.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-error-boundary": "^4.0.13",
     "socket.io-client": "^4.7.4"
   },
   "devDependencies": {
