--- a/BackEnd/keyboard-warrior/keyboard-warrior.csproj
+++ b/BackEnd/keyboard-warrior/keyboard-warrior.csproj
@@ -5,6 +5,7 @@
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
     <RootNamespace>keyboard_warrior</RootNamespace>
+	  <InvariantGlobalization>True</InvariantGlobalization>
   </PropertyGroup>
 
   <ItemGroup>
