--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -26,9 +26,9 @@ jobs:
       run: dotnet build BackEnd/keyboard-warrior.sln --no-restore
 
     - name: Start application
-      run: dotnet run  --project BackEnd/keyboard-warrior/keyboard-warrior.csproj & # Asegúrate de que el puerto coincida con tus pruebas
+      run: dotnet run  --project BackEnd/keyboard-warrior/keyboard-warrior.csproj & 
 
-    # 6. Esperar que la aplicación inicie
+  
     - name: Wait for application to start
       run: |
         echo "Waiting for app to start..."
