--- a/BackEnd/TypingGame.Test/TypingGame.Test.csproj
+++ b/BackEnd/TypingGame.Test/TypingGame.Test.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
@@ -24,6 +24,14 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
       <PrivateAssets>all</PrivateAssets>
     </PackageReference>
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\TypingGame.Application\TypingGame.Application.csproj" />
+    <ProjectReference Include="..\TypingGame.Domain\TypingGame.Domain.csproj" />
+    <ProjectReference Include="..\TypingGame.Infrastructure\TypingGame.Infrastructure.csproj" />
+    <ProjectReference Include="..\TypingGame.Presentation\TypingGame.Presentation.csproj" />
+    <ProjectReference Include="..\TypingGame.Shared\TypingGame.Shared.csproj" />
   </ItemGroup>
 
 </Project>
